--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     font-size: 1.1em;
 }
 .navbar-light .navbar-brand {
-    color: #ffff !important;
+    color: rgb(255, 255, 255) !important;
 }
 
 
@@ -43,12 +43,14 @@
   background-repeat: no-repeat;
   background-size: 0% 2px;
   transition: background-size .4s;
-
+  -webkit-transition: background-size .4s;
+  -moz-transition: background-size .4s;
+  -ms-transition: background-size .4s;
+  -o-transition: background-size .4s;
 }
 .navbar-light .navbar-nav .nav-link:hover {
   background-size: 100% 2px;
   text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #BFE2FF, 0 0 0.5em #BFE2FF, 0 0 0.1em #BFE2FF;
-
 
 }
 .nav-item{
